--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@modules/app-menu": "file:./modules/app-menu/",
     "@modules/camera": "file:./modules/camera",
     "@modules/chat": "file:./modules/chat/",
+    "@modules/login": "file:./modules/login/",
     "@modules/maps": "file:./modules/maps/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/privacy-policy": "file:./modules/privacy-policy",
