add component Push Notifications

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@modules/maps": "file:./modules/maps/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/privacy-policy": "file:./modules/privacy-policy",
+    "@modules/push-notifications": "file:./modules/push-notifications/",
     "@modules/social-login": "file:./modules/social-login/",
     "@modules/splash": "file:./modules/splash/",
     "@modules/terms-and-conditions": "file:./modules/terms-and-conditions",
@@ -35,6 +36,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "0.36.2",
     "react-native-maps": "0.27.1",
+    "react-native-onesignal": "^4.0.3",
     "react-native-permissions": "3.0.4",
     "react-native-reanimated": "^2.0.0",
     "react-native-responsive-screen": "^1.4.2",
